--- a/faq.html
+++ b/faq.html
@@ -91,7 +91,7 @@
                                                 <div class="nav-icon"><i class="bi bi-phone"></i></div>
                                                 <div class="ms-2">
                                                     <h2 class="mb-0 pb-0">Mobile Application</h2>
-                                                    <p class="text-sm mb-0 pb-0">Lorem ipsum adipisicing.</p>
+                                                    <p class="text-sm mb-0 pb-0">Product of Mergcall.</p>
                                                 </div>
                                             </div>
                                         </a>
@@ -104,8 +104,8 @@
                                             <div class="dropdown-item d-flex align-items-center text-start">
                                                 <div class="nav-icon"><i class="bi bi-collection"></i></div>
                                                 <div class="ms-2">
-                                                    <h2 class="mb-0 pb-0">Google Chrome Extension</h2>
-                                                    <p class="text-sm mb-0 pb-0">Lorem ipsum adipisicing.</p>
+                                                     <h2 class="mb-0 pb-0">Google Chrome Extension</h2>
+                                                    <p class="text-sm mb-0 pb-0">Product of Mergcall.</p>
                                                 </div>
                                             </div>
                                         </a>
