--- a/mergeasy.html
+++ b/mergeasy.html
@@ -91,7 +91,7 @@
                                                 <div class="nav-icon"><i class="bi bi-phone"></i></div>
                                                 <div class="ms-2">
                                                     <h2 class="mb-0 pb-0">Mobile Application</h2>
-                                                    <p class="text-sm mb-0 pb-0">Lorem ipsum adipisicing.</p>
+                                                    <p class="text-sm mb-0 pb-0">Product of Mergcall.</p>
                                                 </div>
                                             </div>
                                         </a>
@@ -104,8 +104,8 @@
                                             <div class="dropdown-item d-flex align-items-center text-start">
                                                 <div class="nav-icon"><i class="bi bi-collection"></i></div>
                                                 <div class="ms-2">
-                                                    <h2 class="mb-0 pb-0">Google Chrome Extension</h2>
-                                                    <p class="text-sm mb-0 pb-0">Lorem ipsum adipisicing.</p>
+                                                     <h2 class="mb-0 pb-0">Google Chrome Extension</h2>
+                                                    <p class="text-sm mb-0 pb-0">Product of Mergcall.</p>
                                                 </div>
                                             </div>
                                         </a>
@@ -354,7 +354,7 @@
                             class="bg-white shadow-sm px-3 pb-4 pt-5 text-center merg-card position-relative z-1 h-100">
                             <div class="step-number shadow-sm">01</div>
                             <div class="mb-4">
-                                <img src="assets/images/Sign up-amico.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/upload.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h4 class="">Upload a template </h4>
                             <p class="text">
@@ -371,7 +371,7 @@
                             class="bg-white shadow-sm px-3 pb-4 pt-5 text-center merg-card position-relative z-1 h-100">
                             <div class="step-number shadow-sm">02</div>
                             <div class="mb-4">
-                                <img src="assets/images/Signing a contract-bro.svg" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/choose-delivery.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h4 class="">Choose deliery </h4>
                             <p class="text">
@@ -391,7 +391,7 @@
                             class="bg-white shadow-sm px-3 pb-4 pt-5 text-center merg-card position-relative z-1 h-100">
                             <div class="step-number shadow-sm">03</div>
                             <div class="mb-4" >
-                                <img src="assets/images/Wallet-rafiki.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/merg.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h4 class="">Merge data
                             </h4>
@@ -453,7 +453,7 @@
                             <!-- <h3>MergeSign </h3>
                             <h4 class="text-dark">(eSignatures)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/Signing a contract-bro.svg" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/time.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Save
                                 Your time</h5>
@@ -469,7 +469,7 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/Online document-rafiki.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/workflow.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Intuitive
                                 Workflow</h5>
@@ -486,7 +486,7 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/Online document-rafiki.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/low-cost.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Low Cost
                                 Services</h5>
@@ -502,7 +502,7 @@
                             <!-- <h3>MergeCall</h3>
                             <h4 class="text-dark">(Integrated Calling)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/Calling-bro.svg" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/secure.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Secure &
                                 Error Free</h5>
