--- a/multiline-dialing.html
+++ b/multiline-dialing.html
@@ -91,7 +91,7 @@
                                                 <div class="nav-icon"><i class="bi bi-phone"></i></div>
                                                 <div class="ms-2">
                                                     <h2 class="mb-0 pb-0">Mobile Application</h2>
-                                                    <p class="text-sm mb-0 pb-0">Lorem ipsum adipisicing.</p>
+                                                    <p class="text-sm mb-0 pb-0">Product of Mergcall.</p>
                                                 </div>
                                             </div>
                                         </a>
@@ -104,8 +104,8 @@
                                             <div class="dropdown-item d-flex align-items-center text-start">
                                                 <div class="nav-icon"><i class="bi bi-collection"></i></div>
                                                 <div class="ms-2">
-                                                    <h2 class="mb-0 pb-0">Google Chrome Extension</h2>
-                                                    <p class="text-sm mb-0 pb-0">Lorem ipsum adipisicing.</p>
+                                                     <h2 class="mb-0 pb-0">Google Chrome Extension</h2>
+                                                    <p class="text-sm mb-0 pb-0">Product of Mergcall.</p>
                                                 </div>
                                             </div>
                                         </a>
@@ -258,17 +258,18 @@
                     <div class="col-xl-12 col-lg-12  hero-text mx-auto text-center">
                         <div class="overflow-hidden">
                             <h2 class="services-title" data-aos="fade-up" data-aos-duration="1000">
-                                Introduction to Mergeasy
+                                Mergecall Multiline dialing
                             </h2>
                         </div>
                         <p class="hero-text pe-lg-3 mt-2 mb-0 pb-0 mb-3">
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque, modi nobis. E
                             </p>
-                        <video class="banner-video-b border shadow rounded-2 my-3" controls autoplay loop >
-                            <source src="https://mergeasy.com/dist/images/video.mp4" type="video/mp4">
+                        <!-- <video class="banner-video-b border shadow rounded-2 my-3" controls autoplay loop >
+                            <source src="https://youtu.be/WSZM0PQ6Jgk?list=PLp5go4gGNsPc0g0SS--55zhWEn_8X9XHy" type="video/mp4">
                             Your browser does not support the video tag.
-                        </video>
-                        <p class="hero-text pe-lg-3 mt-3 mb-0 pb-0">
+                        </video> -->
+                        <iframe width="100%" height="517" src="https://www.youtube.com/embed/c2YCq31Ysog?list=PLp5go4gGNsPc0g0SS--55zhWEn_8X9XHy" title="Mergecall Multiline dialing" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                                <p class="hero-text pe-lg-3 mt-3 mb-0 pb-0">
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque, modi nobis. Exercitationem
                             commodi, ex natus aperiam ea fuga, quisquam labore ut quis, omnis numquam. Sunt vero totam
                             culpa quam consectetur! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro sint cupiditate fuga error provident. Odio quod provident nemo deserunt voluptates explicabo eius praesentium, nobis assumenda officiis enim atque repudiandae velit!
