--- a/plan&pricing.html
+++ b/plan&pricing.html
@@ -91,7 +91,7 @@
                                                 <div class="nav-icon"><i class="bi bi-phone"></i></div>
                                                 <div class="ms-2">
                                                     <h2 class="mb-0 pb-0">Mobile Application</h2>
-                                                    <p class="text-sm mb-0 pb-0">Lorem ipsum adipisicing.</p>
+                                                    <p class="text-sm mb-0 pb-0">Product of Mergcall.</p>
                                                 </div>
                                             </div>
                                         </a>
@@ -105,7 +105,7 @@
                                                 <div class="nav-icon"><i class="bi bi-collection"></i></div>
                                                 <div class="ms-2">
                                                     <h2 class="mb-0 pb-0">Google Chrome Extension</h2>
-                                                    <p class="text-sm mb-0 pb-0">Lorem ipsum adipisicing.</p>
+                                                    <p class="text-sm mb-0 pb-0">Product of Mergcall.</p>
                                                 </div>
                                             </div>
                                         </a>
