--- a/mergeasy.html
+++ b/mergeasy.html
@@ -287,35 +287,13 @@
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg-5 mx-auto mt-lg-0 mt-3 ">
-                        <button class="about-video bg-transparent border-0 position-relative p-0" data-bs-toggle="modal"
-                        data-bs-target="#exampleModal">
-                        <img src="assets/images/hero-image.webp" alt="" class="img-fluid rounded-2">
-                        <div class="play-icon">
-                            <i class="bi bi-play-fill"></i>
+                         <div class="banner-video">
+                            <img src="assets/images/video-frame.png" alt="video" class="img-fluid video-desktop">
+                            <video class="banner-video-b" controls autoplay loop>
+                                <source src="https://mergeasy.com/dist/images/video.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
                         </div>
-                    </button>
-                    <!-- Modal -->
-                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                        aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered modal-lg p-0">
-                            <div class="modal-content p-0 bg-transparent border-0">
-                                <div class="modal-header">
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close">
-                                        <i class="bi bi-x-circle"></i>
-                                    </button>
-                                </div>
-                                <div class="modal-body p-0">
-                                    <video class="banner-video-b border shadow rounded-2" controls  loop >
-                                        <source src="https://mergeasy.com/dist/images/video.mp4" type="video/mp4">
-                                        Your browser does not support the video tag.
-                                    </video>
-                                    <!-- <iframe class="w-100" style="height:400px;" frameborder="0" allowfullscreen=""
-                                        src="https://www.youtube.com/embed/1MTkZPys7mU?feature=oembed?playlist=1MTkZPys7mU&amp;mute=0&amp;autoplay=0&amp;loop=no&amp;controls=0&amp;start=0&amp;end="></iframe> -->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                     </div>
                     <div class="col-lg-12">
                         <div class="d-lg-none d-flex align-items-center flex-sm-row flex-column justify-content-center mt-4">
