--- a/mergcall.html
+++ b/mergcall.html
@@ -303,13 +303,20 @@
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg-5 mx-auto mt-lg-0 mt-3 ">
-                        <button class="about-video bg-transparent border-0 position-relative p-0" data-bs-toggle="modal"
+                        <div class="banner-video">
+                            <img src="assets/images/video-frame.png" alt="video" class="img-fluid video-desktop">
+                            <video class="banner-video-b" controls autoplay loop>
+                                <source src="https://mergeasy.com/dist/images/video.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
+                        </div>
+                        <!-- <button class="about-video bg-transparent border-0 position-relative p-0" data-bs-toggle="modal"
                             data-bs-target="#exampleModal">
                             <img src="assets/images/hero-image.webp" alt class="img-fluid rounded-2">
                             <div class="play-icon">
                                 <i class="bi bi-play-fill"></i>
                             </div>
-                        </button>
+                        </button> -->
                         <!-- Modal -->
                         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                             aria-hidden="true">
