--- a/mobile-application.html
+++ b/mobile-application.html
@@ -444,8 +444,8 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6 col-md-6 mx-auto mt-lg-0 mt-3 me-auto overflow-hidden">
-                        <div class="app-box-row d-flex justify-content-center p-3 bg-light  rounded-3 shadow-sm" data-aos="fade-right" data-aos-duration="1000">
-                            <img src="assets/images/mobile application/001c3806-a8b4-41d4-99a6-600ee896f7c5.jpg"
+                        <div class="app-box-row d-flex justify-content-center  bg-light  rounded-3 shadow-sm" data-aos="fade-right" data-aos-duration="1000">
+                            <img src="assets/images/mobile application/Group 48095556.png"
                                 alt="Choose deliery" class=" img-fluid" >
                         </div>
                     </div>
@@ -510,8 +510,8 @@
                         </ul> -->
                     </div>
                     <div class="col-lg-6  col-md-6 mx-auto ms-auto order-lg-2 order-1 overflow-hidden">
-                        <div class="app-box-row d-flex justify-content-center p-3 bg-light  rounded-3 shadow-sm" data-aos="fade-left" data-aos-duration="1000">
-                            <img src="assets/images/mobile application/1e50eb9c-a260-45ac-81b1-150864b8657b.jpg"
+                        <div class="app-box-row d-flex justify-content-center  bg-light  rounded-3 shadow-sm" data-aos="fade-left" data-aos-duration="1000">
+                            <img src="assets/images/mobile application/Group 48095552.png"
                                 alt="Choose deliery" class=" img-fluid" >
                         </div>
                     </div>
@@ -526,8 +526,8 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6 col-md-6 mx-auto me-auto overflow-hidden">
                       
-                        <div class="app-box-row d-flex justify-content-center p-3 bg-light  rounded-3 shadow-sm" data-aos="fade-right" data-aos-duration="1000">
-                            <img src="assets/images/mobile application/61627733-8155-4179-b4d4-a9d481b37828.jpg"
+                        <div class="app-box-row d-flex justify-content-center  bg-light  rounded-3 shadow-sm" data-aos="fade-right" data-aos-duration="1000">
+                            <img src="assets/images/mobile application/Group 48095555.png"
                                 alt="Choose deliery" class=" img-fluid" >
                         </div>
                     </div>
