--- a/blog-and-demos.html
+++ b/blog-and-demos.html
@@ -265,9 +265,9 @@
                             culpa quam consectetur!
                     </div>
                 </div>
-                <div class="row" data-aos="fade-up" data-aos-duration="1000">
+                <div class="row" >
                     <div class="col-lg-4 col-md-6 mb-3">
-                        <div class="demo-card shadow">
+                        <div class="demo-card shadow" data-aos="fade-up" data-aos-duration="1000">
                             <div class="demo-video-image position-relative">
                                 <a href="bulk-texting.html" class="about-video">
                                     <img src="assets/images/blog/1.webp" alt="" class="img-fluid rounded-2">
@@ -299,7 +299,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 mb-3">
-                        <div class="demo-card shadow">
+                        <div class="demo-card shadow" data-aos="fade-up" data-aos-duration="1000">
                             <div class="demo-video-image position-relative">
                                 <a href="multiline-dialing.html" class="about-video">
                                     <img src="assets/images/blog/2.webp" alt="" class="img-fluid rounded-2">
@@ -331,7 +331,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 mb-3">
-                        <div class="demo-card shadow">
+                        <div class="demo-card shadow" data-aos="fade-up" data-aos-duration="1000">
                             <div class="demo-video-image position-relative">
                                 <a href="zapier-integration.html" class="about-video">
                                     <img src="assets/images/blog/4.webp" alt="" class="img-fluid rounded-2">
@@ -364,7 +364,7 @@
                     </div>
 
                     <div class="col-lg-4 col-md-6 mb-3">
-                        <div class="demo-card shadow">
+                        <div class="demo-card shadow" data-aos="fade-up" data-aos-duration="1000">
                             <div class="demo-video-image position-relative">
                                 <a href="push-to-crm.html" class="about-video">
                                     <img src="assets/images/blog/5.webp" alt="" class="img-fluid rounded-2">
@@ -398,7 +398,7 @@
 
 
                     <div class="col-lg-4 col-md-6 mb-3">
-                        <div class="demo-card shadow">
+                        <div class="demo-card shadow" data-aos="fade-up" data-aos-duration="1000">
                             <div class="demo-video-image position-relative">
                                 <a href="podio-form-builder.html" class="about-video">
                                     <img src="assets/images/blog/9.webp" alt="" class="img-fluid rounded-2">
@@ -432,7 +432,7 @@
 
 
                     <div class="col-lg-4 col-md-6 mb-3">
-                        <div class="demo-card shadow">
+                        <div class="demo-card shadow" data-aos="fade-up" data-aos-duration="1000">
                             <div class="demo-video-image position-relative">
                                 <a href="buy-number.html" class="about-video">
                                     <img src="assets/images/blog/7.webp" alt="" class="img-fluid rounded-2">
@@ -465,7 +465,7 @@
                     </div>
 
                     <div class="col-lg-4 col-md-6 mb-3">
-                        <div class="demo-card shadow">
+                        <div class="demo-card shadow" data-aos="fade-up" data-aos-duration="1000">
                             <div class="demo-video-image position-relative">
                                 <a href="flow-demo.html" class="about-video">
                                     <img src="assets/images/blog/8.webp" alt="" class="img-fluid rounded-2">
@@ -500,7 +500,7 @@
                     </div>
 
                     <div class="col-lg-4 col-md-6 mb-3">
-                        <div class="demo-card shadow">
+                        <div class="demo-card shadow" data-aos="fade-up" data-aos-duration="1000">
                             <div class="demo-video-image position-relative">
                                 <a href="podio-integration.html" class="about-video">
                                     <img src="assets/images/blog/11.webp" alt="" class="img-fluid rounded-2">
@@ -533,7 +533,7 @@
                     </div>
 
                     <div class="col-lg-4 col-md-6 mb-3">
-                        <div class="demo-card shadow">
+                        <div class="demo-card shadow" data-aos="fade-up" data-aos-duration="1000">
                             <div class="demo-video-image position-relative">
                                 <a href="tracking-number.html" class="about-video">
                                     <img src="assets/images/blog/6.webp" alt="" class="img-fluid rounded-2">
@@ -566,7 +566,7 @@
                     </div>
 
                     <div class="col-lg-4 col-md-6 mb-3">
-                        <div class="demo-card shadow">
+                        <div class="demo-card shadow" data-aos="fade-up" data-aos-duration="1000">
                             <div class="demo-video-image position-relative">
                                 <a href="payment-dashboard.html" class="about-video">
                                     <img src="assets/images/blog/4.webp" alt="" class="img-fluid rounded-2">
@@ -598,7 +598,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 mb-3">
-                        <div class="demo-card shadow">
+                        <div class="demo-card shadow" data-aos="fade-up" data-aos-duration="1000">
                             <div class="demo-video-image position-relative">
                                 <a href="mergcall-extension.html" class="about-video">
                                     <img src="assets/images/blog/11.webp" alt="" class="img-fluid rounded-2">
@@ -629,7 +629,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-12 mt-5 d-flex justify-content-center">
+                    <!-- <div class="col-lg-12 mt-5 d-flex justify-content-center">
                         <nav aria-label="Page navigation example">
                             <ul class="pagination">
                                 <li class="page-item">
@@ -649,7 +649,7 @@
                                 </li>
                             </ul>
                         </nav>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
