--- a/chrome-extension.html
+++ b/chrome-extension.html
@@ -450,8 +450,8 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-6 me-lg-auto mx-lg-0 mx-auto overflow-hidden">
-                        <div class="app-box-row d-flex justify-content-center bg-light overflow-hidden p-3 rounded-3  shadow-sm" data-aos="fade-right" data-aos-duration="1000">
-                            <img src="assets/images/mergecall extension/1 (1).png"
+                        <div class="app-box-row d-flex justify-content-center bg-light overflow-hidden  rounded-3  shadow-sm" data-aos="fade-right" data-aos-duration="1000">
+                            <img src="assets/images/mergecall extension/Frame 48095548.png"
                                 alt="Choose deliery" class=" img-fluid w-75" >
                         </div>
                     </div>
@@ -521,9 +521,9 @@
                         </ul> -->
                     </div>
                     <div class="col-md-6 ms-lg-auto mx-lg-0 mx-auto order-lg-2 order-1 overflow-hidden">
-                        <div class="app-box-row d-flex justify-content-center overflow-hidden p-3 rounded-3 shadow-sm bg-light"  data-aos="fade-left" data-aos-duration="1000">
+                        <div class="app-box-row d-flex justify-content-center overflow-hidden  rounded-3 shadow-sm bg-light"  data-aos="fade-left" data-aos-duration="1000">
                             
-                                <img src="assets/images/mergecall extension/1 (2).png"
+                                <img src="assets/images/mergecall extension/Group 48095564.png"
                                 alt="Choose deliery" class=" img-fluid  w-100">
                         </div>
                     </div>
@@ -537,9 +537,9 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-6 me-lg-auto mx-lg-0 mx-auto overflow-hidden">
-                        <div class="app-box-row d-flex justify-content-center overflow-hidden p-3 rounded-3 shadow-sm bg-light"  data-aos="fade-right" data-aos-duration="1000">
+                        <div class="app-box-row d-flex justify-content-center overflow-hidden  rounded-3 shadow-sm bg-light"  data-aos="fade-right" data-aos-duration="1000">
                             
-                                <img src="assets/images/mergecall extension/1 (3).png"
+                                <img src="assets/images/mergecall extension/Group 48095565.png"
                                 alt="Choose deliery" class=" img-fluid ">
                         </div>
                     </div>
