--- a/index.html
+++ b/index.html
@@ -1146,7 +1146,7 @@
         // INJECT CSS
         var css = document.createElement("style");
         css.type = "text/css";
-        css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid black}";
+        css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #60b0f3}";
         document.body.appendChild(css);
     };
 
