--- a/mergsign.html
+++ b/mergsign.html
@@ -348,7 +348,7 @@
                 <div class="row align-items-center">
                     <div class="col-md-6 me-lg-auto mx-lg-0 mx-auto">
                         <div class="app-box-row d-flex justify-content-center ">
-                            <img src="assets/images/Mergesign/Group 48095560.png" alt="Choose deliery" class="shadow img-fluid rounded-3 shadow-sm" data-aos="fade-right" data-aos-duration="1000">
+                            <img src="assets/images/Mergesign/Screenshot 2024-10-08 123244.png" alt="Choose deliery" class="shadow img-fluid rounded-3 shadow-sm" data-aos="fade-right" data-aos-duration="1000">
                         </div>
                     </div>
                     <div class="col-lg-5  hero-text  mx-auto mt-lg-0 mt-3 text-lg-start text-center">
@@ -426,7 +426,7 @@
                     <div class="col-lg-6  ms-lg-auto mx-lg-0 mx-auto order-lg-2 order-1">
                       
                         <div class="app-box-row d-flex justify-content-center ">
-                            <img src="assets/images/Mergesign/Group 48095561.png" alt="Choose deliery" class="shadow-sm img-fluid rounded-3 " data-aos="fade-left" data-aos-duration="1000">
+                            <img src="assets/images/Mergesign/Screenshot 2024-10-08 123452.png" alt="Choose deliery" class="shadow-sm img-fluid rounded-3 " data-aos="fade-left" data-aos-duration="1000">
                         </div>
                     </div>
 
@@ -441,7 +441,7 @@
                     <div class="col-lg-6  me-lg-auto mx-lg-0 mx-auto">
                       
                         <div class="app-box-row d-flex justify-content-center ">
-                            <img src="assets/images/Mergesign/Group 48095562.png" alt="Choose deliery" class=" img-fluid rounded-3 shadow-sm" data-aos="fade-right" data-aos-duration="1000">
+                            <img src="assets/images/Mergesign/Screenshot 2024-10-08 123610.png" alt="Choose deliery" class=" img-fluid rounded-3 shadow-sm" data-aos="fade-right" data-aos-duration="1000">
                         </div>
                     </div>
                     <div class="col-lg-5   hero-text  mx-auto mt-lg-0 mt-3 text-lg-start text-center order-lg-1 order-2">
