--- a/mergcall.html
+++ b/mergcall.html
@@ -274,11 +274,11 @@
                 <div class="row align-items-center">
                     <div class="col-xl-6 col-lg-7  hero-text text-lg-start text-center">
 
-                       <div class="overflow-hidden">
-                        <h2 class="services-title" data-aos="fade-up" data-aos-duration="1000">
-                            The Smartest Phone <br class="d-lg-block d-none"> & Sales Dialer.
-                        </h2>
-                       </div>
+                        <div class="overflow-hidden">
+                            <h2 class="services-title" data-aos="fade-up" data-aos-duration="1000">
+                                The Smartest Phone <br class="d-lg-block d-none"> & Sales Dialer.
+                            </h2>
+                        </div>
                         <h1 class="mb-3 pb-0">
                             Best Value For Money.
                         </h1>
@@ -367,7 +367,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-4 mx-auto">
-                        <div class="app-box-row d-flex justify-content-center overflow-hidden" >
+                        <div class="app-box-row d-flex justify-content-center overflow-hidden">
                             <img src="assets/images/Calling-amico.png" alt="Choose deliery" class=" img-fluid"
                                 style="max-width: 270px;" data-aos="fade-right" data-aos-duration="1000">
                         </div>
@@ -419,7 +419,8 @@
                             <!-- <h3>MergeSign </h3>
                             <h4 class="text-dark">(eSignatures)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/call/Calling-rafiki.png" alt class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/call/Calling-rafiki.png" alt class="img-fluid"
+                                    data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Multi line dialer
                             </h5>
@@ -435,7 +436,8 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/call/Calling-bro (1).png" alt class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/call/Calling-bro (1).png" alt class="img-fluid"
+                                    data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Calling
                             </h5>
@@ -449,7 +451,8 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/call/Messages-amico.png" alt class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/call/Messages-amico.png" alt class="img-fluid"
+                                    data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>SMS
                             </h5>
@@ -464,7 +467,8 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/call/Web search-rafiki.png" alt class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/call/Web search-rafiki.png" alt class="img-fluid"
+                                    data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>API AND WEBHOOKS
                             </h5>
@@ -479,7 +483,8 @@
                             <!-- <h3>MergeCall</h3>
                             <h4 class="text-dark">(Integrated Calling)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/call/Forms-bro.png" alt class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/call/Forms-bro.png" alt class="img-fluid" data-aos="zoom-in"
+                                    data-aos-duration="1000">
                             </div>
                             <h5>Custom Forms
                             </h5>
@@ -496,7 +501,8 @@
                             <!-- <h3>MergeSign </h3>
                             <h4 class="text-dark">(eSignatures)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/call/Chat-rafiki (1).png" alt class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/call/Chat-rafiki (1).png" alt class="img-fluid"
+                                    data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Bulk Texting
                             </h5>
@@ -512,7 +518,8 @@
                             <!-- <h3>MergeSign </h3>
                             <h4 class="text-dark">(eSignatures)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/call/Ecommerce campaign-rafiki.png" alt class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/call/Ecommerce campaign-rafiki.png" alt class="img-fluid"
+                                    data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Campaign Management
                             </h5>
@@ -527,7 +534,8 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/call/Call center-bro.png" alt class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/call/Call center-bro.png" alt class="img-fluid"
+                                    data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Lead Center
                             </h5>
@@ -543,7 +551,8 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/call/Recording-bro.png" alt class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/call/Recording-bro.png" alt class="img-fluid" data-aos="zoom-in"
+                                    data-aos-duration="1000">
                             </div>
                             <h5>Call Recording
                             </h5>
@@ -559,7 +568,8 @@
                             <!-- <h3>MergeCall</h3>
                             <h4 class="text-dark">(Integrated Calling)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/call/Calling-rafiki.png" alt class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/call/Calling-rafiki.png" alt class="img-fluid"
+                                    data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Click To Call
                             </h5>
@@ -578,7 +588,8 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/call/Pricing plans-rafiki.png" alt class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/call/Pricing plans-rafiki.png" alt class="img-fluid"
+                                    data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Cheapest
                             </h5>
@@ -593,7 +604,8 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/call/Company-rafiki.png" alt class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/call/Company-rafiki.png" alt class="img-fluid"
+                                    data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Multiple Companies Management
                             </h5>
@@ -618,7 +630,7 @@
                             MergCall FAQs
                         </h2>
                         <div class="d-lg-none d-flex justify-content-center overflow-hidden">
-                            <img src="assets/images/Questions-pana.png" alt class="img-fluid"  style="max-width: 200px;">
+                            <img src="assets/images/Questions-pana.png" alt class="img-fluid" style="max-width: 200px;">
                         </div>
 
                         <div class="faq-list p-0 mt-3 text-start">
@@ -718,7 +730,8 @@
                         </div>
                     </div>
                     <div class="col-lg-4 mx-auto d-lg-block d-none">
-                        <img src="assets/images/Questions-pana.png" alt class="img-fluid" data-aos="fade-left" data-aos-duration="1000">
+                        <img src="assets/images/Questions-pana.png" alt class="img-fluid" data-aos="fade-left"
+                            data-aos-duration="1000">
                     </div>
                 </div>
             </div>
@@ -943,13 +956,13 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
 
-   <script src="https://code.jquery.com/jquery-3.7.1.slim.js"
+    <script src="https://code.jquery.com/jquery-3.7.1.slim.js"
         integrity="sha256-UgvvN8vBkgO0luPSUl2s8TIlOSYRoGFAX4jlCIm9Adc=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
-      </script>
+    </script>
     <script>
 
         $('.testi').owlCarousel({
