--- a/chrome-extension.html
+++ b/chrome-extension.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/buttons.css">
@@ -104,7 +104,7 @@
                                             <div class="dropdown-item d-flex align-items-center text-start">
                                                 <div class="nav-icon"><i class="bi bi-collection"></i></div>
                                                 <div class="ms-2">
-                                                     <h2 class="mb-0 pb-0">Google Chrome Extension</h2>
+                                                    <h2 class="mb-0 pb-0">Google Chrome Extension</h2>
                                                     <p class="text-sm mb-0 pb-0">Product of Mergcall.</p>
                                                 </div>
                                             </div>
@@ -258,10 +258,10 @@
                 <div class="row align-items-center">
                     <div class="col-xl-6 col-lg-7  hero-text text-lg-start text-center">
                         <div class="overflow-hidden">
-                        <h2 class="services-title " data-aos="fade-up" data-aos-duration="1000">
-                            Level Up Your Productivity
-                        </h2>
-                    </div>
+                            <h2 class="services-title " data-aos="fade-up" data-aos-duration="1000">
+                                Level Up Your Productivity
+                            </h2>
+                        </div>
                         <div class="overflow-hidden">
                             <h1 class="mb-3 pb-0" data-aos="fade-up" data-aos-duration="1500">
                                 Chrome Extension
@@ -276,7 +276,9 @@
                         </p>
                         <div class="d-lg-flex d-none align-items-center flex-sm-row flex-column mt-4">
                             <div class="hero-btn">
-                                <a target="_blank" href="https://chromewebstore.google.com/detail/mergecall/ihgbmckjcoehaahnhhfcilllgkhkdgkh#:~:text=MergeCall%20Chrome%20Dialer%20is%20a%20streamlined" class="animated-button1">
+                                <a target="_blank"
+                                    href="https://chromewebstore.google.com/detail/mergecall/ihgbmckjcoehaahnhhfcilllgkhkdgkh#:~:text=MergeCall%20Chrome%20Dialer%20is%20a%20streamlined"
+                                    class="animated-button1">
                                     <span></span>
                                     <span></span>
                                     <span></span>
@@ -367,7 +369,8 @@
                     <div class="col-lg-3 col-md-6 mb-lg-0 mb-3">
                         <div class=" px-3 py-4 text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/extension-feature/Notes-pana.png" alt="" class="img-fluid"  data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/extension-feature/Notes-pana.png" alt="" class="img-fluid"
+                                    data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5 class="">Call Notes in Real Time</h5>
                         </div>
@@ -375,8 +378,8 @@
                     <div class="col-lg-3 col-md-6 mb-lg-0 mb-3">
                         <div class=" px-3 py-4 text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/extension-feature/Calling-amico (1).png" alt=""  data-aos="zoom-in" data-aos-duration="1000"
-                                    class="img-fluid">
+                                <img src="assets/images/extension-feature/Calling-amico (1).png" alt=""
+                                    data-aos="zoom-in" data-aos-duration="1000" class="img-fluid">
                             </div>
                             <h5 class="">See and Return Recent Calls</h5>
                         </div>
@@ -384,7 +387,8 @@
                     <div class="col-lg-3 col-md-6 mb-lg-0 mb-3">
                         <div class=" px-3 py-4 text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/extension-feature/Chat-rafiki.png" alt="" class="img-fluid"  data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/extension-feature/Chat-rafiki.png" alt="" class="img-fluid"
+                                    data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5 class="">Synced to All Dialers</h5>
                         </div>
@@ -392,8 +396,8 @@
                     <div class="col-lg-3 col-md-6 mb-lg-0 mb-3">
                         <div class=" px-3 py-4 text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/extension-feature/Inbox cleanup-amico.png" alt=""  data-aos="zoom-in" data-aos-duration="1000"
-                                    class="img-fluid">
+                                <img src="assets/images/extension-feature/Inbox cleanup-amico.png" alt=""
+                                    data-aos="zoom-in" data-aos-duration="1000" class="img-fluid">
                             </div>
                             <h5 class="">Quick Access to Inbox</h5>
                         </div>
@@ -401,7 +405,8 @@
                     <div class="col-lg-3 col-md-6 mb-lg-0 mb-3">
                         <div class=" px-3 py-4 text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/mobile-feature/Inbox cleanup-pana.png" alt="" class="img-fluid"  data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/mobile-feature/Inbox cleanup-pana.png" alt="" class="img-fluid"
+                                    data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5 class="">Free Download</h5>
                         </div>
@@ -409,8 +414,8 @@
                     <div class="col-lg-3 col-md-6 mb-lg-0 mb-3">
                         <div class=" px-3 py-4 text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/mobile-feature/Control Panel-rafiki.png" alt=""  data-aos="zoom-in" data-aos-duration="1000"
-                                    class="img-fluid">
+                                <img src="assets/images/mobile-feature/Control Panel-rafiki.png" alt=""
+                                    data-aos="zoom-in" data-aos-duration="1000" class="img-fluid">
                             </div>
                             <h5 class="">Click-to-Call from Most CRMs</h5>
                         </div>
@@ -418,8 +423,8 @@
                     <div class="col-lg-3 col-md-6 mb-lg-0 mb-3">
                         <div class=" px-3 py-4 text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/mobile-feature/Online resume-cuate.png" alt=""  data-aos="zoom-in" data-aos-duration="1000"
-                                    class="img-fluid">
+                                <img src="assets/images/mobile-feature/Online resume-cuate.png" alt=""
+                                    data-aos="zoom-in" data-aos-duration="1000" class="img-fluid">
                             </div>
                             <h5 class="">Set Your Own Availability</h5>
                         </div>
@@ -450,9 +455,10 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-6 me-lg-auto mx-lg-0 mx-auto overflow-hidden">
-                        <div class="app-box-row d-flex justify-content-center   overflow-hidden  " data-aos="fade-right" data-aos-duration="1000">
-                            <img src="assets/images/mergecall extension/1 (1).png"
-                                alt="Choose deliery" class=" img-fluid w-75 rounded-3  shadow-sm" >
+                        <div class="app-box-row d-flex justify-content-center   overflow-hidden  " data-aos="fade-right"
+                            data-aos-duration="1000">
+                            <img src="assets/images/mergecall extension/1 (1).png" alt="Choose deliery"
+                                class=" img-fluid w-75 rounded-3  shadow-sm">
                         </div>
                     </div>
                     <div class="col-lg-5  mt-lg-0 mt-3  hero-text  mx-auto text-lg-start text-center">
@@ -521,10 +527,11 @@
                         </ul> -->
                     </div>
                     <div class="col-md-6 ms-lg-auto mx-lg-0 mx-auto order-lg-2 order-1 overflow-hidden">
-                        <div class="app-box-row d-flex justify-content-center overflow-hidden "  data-aos="fade-left" data-aos-duration="1000">
-                            
-                                <img src="assets/images/mergecall extension/1 (2).png"
-                                alt="Choose deliery" class=" img-fluid  w-100 rounded-3  shadow-sm">
+                        <div class="app-box-row d-flex justify-content-center overflow-hidden " data-aos="fade-left"
+                            data-aos-duration="1000">
+
+                            <img src="assets/images/mergecall extension/1 (2).png" alt="Choose deliery"
+                                class=" img-fluid  w-100 rounded-3  shadow-sm">
                         </div>
                     </div>
 
@@ -537,10 +544,11 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-6 me-lg-auto mx-lg-0 mx-auto overflow-hidden">
-                        <div class="app-box-row d-flex justify-content-center overflow-hidden  rounded-3 shadow-sm bg-light"  data-aos="fade-right" data-aos-duration="1000">
-                            
-                                <img src="assets/images/mergecall extension/1 (3).png"
-                                alt="Choose deliery" class=" img-fluid rounded-3  shadow-sm">
+                        <div class="app-box-row d-flex justify-content-center overflow-hidden  rounded-3 shadow-sm bg-light"
+                            data-aos="fade-right" data-aos-duration="1000">
+
+                            <img src="assets/images/mergecall extension/1 (3).png" alt="Choose deliery"
+                                class=" img-fluid rounded-3  shadow-sm">
                         </div>
                     </div>
                     <div class="col-lg-5  mt-lg-0 mt-3  hero-text  mx-auto text-lg-start text-center">
@@ -670,7 +678,8 @@
                         </div>
                     </div>
                     <div class="col-lg-4 mx-auto d-lg-block d-none overflow-hidden">
-                        <img src="assets/images/Questions-pana.png" alt="" class="img-fluid" data-aos="fade-left" data-aos-duration="1000">
+                        <img src="assets/images/Questions-pana.png" alt="" class="img-fluid" data-aos="fade-left"
+                            data-aos-duration="1000">
                     </div>
                 </div>
             </div>
@@ -885,13 +894,13 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
 
-   <script src="https://code.jquery.com/jquery-3.7.1.slim.js"
+    <script src="https://code.jquery.com/jquery-3.7.1.slim.js"
         integrity="sha256-UgvvN8vBkgO0luPSUl2s8TIlOSYRoGFAX4jlCIm9Adc=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
-      </script>
+    </script>
     <script>
 
         $('.testi').owlCarousel({
