--- a/index.html
+++ b/index.html
@@ -259,22 +259,24 @@
             <div class="container">
                 <div class="row ">
                     <div class="col-xl-7 col-lg-7  hero-text">
-                       <div class="overflow-hidden">
-                        <!-- <h1 class="mb-3 pb-0" data-aos="fade-up" data-aos-duration="1500">
+                        <div class="overflow-hidden">
+                            <!-- <h1 class="mb-3 pb-0" data-aos="fade-up" data-aos-duration="1500">
                             Revolutionize Your Workflow:
                         </h1> -->
-                        <span class="title">Revolutionize Your Workflow:</span>
-                       </div>
+                            <span class="title">Revolutionize Your Workflow:</span>
+                        </div>
                         <div class="overflow-hidden pt-2">
-                            <h2 class="services-title-2 text-black mb-0 pb-0 " >
-                              <div class="d-flex">
-                                All-in-One  <span class="d-md-none d-block">&nbsp;Solution for</span><br class="d-md-none d-block">
-                              </div>
-                               
+                            <h2 class="services-title-2 text-black mb-0 pb-0 ">
+                                <div class="d-flex">
+                                    All-in-One <span class="d-md-none d-block">&nbsp;Solution for</span><br
+                                        class="d-md-none d-block">
+                                </div>
+
                                 <div class="typewriter ">
                                     <div class="d-flex mb-0 pb-0 ">
-                                       <span class="d-md-block d-none services-title-2 text-primary"> Solution for</span> &nbsp;<p class="typewrite services-title "
-                                            data-period="500" data-type='[ "Document Merging.", " eSignatures.", "   Calling." ]'>
+                                        <span class="d-md-block d-none services-title-2 text-primary"> Solution
+                                            for</span> &nbsp;<p class="typewrite services-title " data-period="500"
+                                            data-type='[ "Document Merging.", " eSignatures.", "   Calling." ]'>
                                             <span class="wrap services-title-2 text-primary"></span>
                                         </p>
                                     </div>
@@ -283,7 +285,9 @@
                         </div>
 
                         <p class="hero-text pe-lg-3  mb-lg-4 mb-3">
-                            Experience a unified platform that allows you to merge documents, sign electronically, and communicate seamlessly. With free developer API access, you can fully integrate and customize the system to suit your business needs.
+                            Experience a unified platform that allows you to merge documents, sign electronically, and
+                            communicate seamlessly. With free developer API access, you can fully integrate and
+                            customize the system to suit your business needs.
                         </p>
                         <div class="d-lg-none d-block mt-2 mb-4">
                             <img src="assets/images/hero-image.webp" alt="" class="img-fluid  rounded-1  "
@@ -1089,70 +1093,70 @@
 
 
     </script>
-  <script>
-   
+    <script>
 
 
-    var TxtType = function (el, toRotate, period) {
-        this.toRotate = toRotate;
-        this.el = el;
-        this.loopNum = 0;
-        this.period = parseInt(period, 10) || 2000;
-        this.txt = '';
-        this.tick();
-        this.isDeleting = false;
-    };
 
-    TxtType.prototype.tick = function () {
-        var i = this.loopNum % this.toRotate.length;
-        var fullTxt = this.toRotate[i];
-
-        if (this.isDeleting) {
-            this.txt = fullTxt.substring(0, this.txt.length - 1);
-        } else {
-            this.txt = fullTxt.substring(0, this.txt.length + 1);
-        }
-
-        this.el.innerHTML = '<span class="wrap">' + this.txt + '</span>';
-
-        var that = this;
-        var delta = 200 - Math.random() * 100;
-
-        if (this.isDeleting) { delta /= 2; }
-
-        if (!this.isDeleting && this.txt === fullTxt) {
-            delta = this.period;
-            this.isDeleting = true;
-        } else if (this.isDeleting && this.txt === '') {
+        var TxtType = function (el, toRotate, period) {
+            this.toRotate = toRotate;
+            this.el = el;
+            this.loopNum = 0;
+            this.period = parseInt(period, 10) || 2000;
+            this.txt = '';
+            this.tick();
             this.isDeleting = false;
-            this.loopNum++;
-            delta = 500;
-        }
+        };
 
-        setTimeout(function () {
-            that.tick();
-        }, delta);
-    };
+        TxtType.prototype.tick = function () {
+            var i = this.loopNum % this.toRotate.length;
+            var fullTxt = this.toRotate[i];
 
-    window.onload = function () {
-        var elements = document.getElementsByClassName('typewrite');
-        for (var i = 0; i < elements.length; i++) {
-            var toRotate = elements[i].getAttribute('data-type');
-            var period = elements[i].getAttribute('data-period');
-            if (toRotate) {
-                new TxtType(elements[i], JSON.parse(toRotate), period);
+            if (this.isDeleting) {
+                this.txt = fullTxt.substring(0, this.txt.length - 1);
+            } else {
+                this.txt = fullTxt.substring(0, this.txt.length + 1);
             }
-        }
-        // INJECT CSS
-        var css = document.createElement("style");
-        css.type = "text/css";
-        css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #60b0f3}";
-        document.body.appendChild(css);
-    };
+
+            this.el.innerHTML = '<span class="wrap">' + this.txt + '</span>';
+
+            var that = this;
+            var delta = 200 - Math.random() * 100;
+
+            if (this.isDeleting) { delta /= 2; }
+
+            if (!this.isDeleting && this.txt === fullTxt) {
+                delta = this.period;
+                this.isDeleting = true;
+            } else if (this.isDeleting && this.txt === '') {
+                this.isDeleting = false;
+                this.loopNum++;
+                delta = 500;
+            }
+
+            setTimeout(function () {
+                that.tick();
+            }, delta);
+        };
+
+        window.onload = function () {
+            var elements = document.getElementsByClassName('typewrite');
+            for (var i = 0; i < elements.length; i++) {
+                var toRotate = elements[i].getAttribute('data-type');
+                var period = elements[i].getAttribute('data-period');
+                if (toRotate) {
+                    new TxtType(elements[i], JSON.parse(toRotate), period);
+                }
+            }
+            // INJECT CSS
+            var css = document.createElement("style");
+            css.type = "text/css";
+            css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #60b0f3}";
+            document.body.appendChild(css);
+        };
 
 
 
-</script>
+    </script>
 </body>
 
 </html>
