--- a/mobile-application.html
+++ b/mobile-application.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/buttons.css">
@@ -104,7 +104,7 @@
                                             <div class="dropdown-item d-flex align-items-center text-start">
                                                 <div class="nav-icon"><i class="bi bi-collection"></i></div>
                                                 <div class="ms-2">
-                                                     <h2 class="mb-0 pb-0">Google Chrome Extension</h2>
+                                                    <h2 class="mb-0 pb-0">Google Chrome Extension</h2>
                                                     <p class="text-sm mb-0 pb-0">Product of Mergcall.</p>
                                                 </div>
                                             </div>
@@ -261,11 +261,11 @@
                                 Because Work Isn't<br> Always at a Desk
                             </h2>
                         </div>
-                       <div class="overflow-hidden">
-                        <h1 class="mb-3 pb-0" data-aos="fade-up" data-aos-duration="1000">
-                            Mobile Application
-                        </h1>
-                       </div>
+                        <div class="overflow-hidden">
+                            <h1 class="mb-3 pb-0" data-aos="fade-up" data-aos-duration="1000">
+                                Mobile Application
+                            </h1>
+                        </div>
                         <p class="hero-text pe-lg-3 mt-2 mb-0 pb-0">
                             Mergeasy’s free Mobile App gives you instant access to your CRM contacts no matter where you
                             are. Make calls, send texts, and be available on-the-go, all automatically synced to your
@@ -356,7 +356,8 @@
                     <div class="col-lg-3 mb-lg-0 mb-3">
                         <div class=" text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/mobile-feature/Download-amico.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/mobile-feature/Download-amico.png" alt="" class="img-fluid"
+                                    data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5 class="">Free Download for
                                 iOS + Android</h5>
@@ -365,7 +366,8 @@
                     <div class="col-lg-3 mb-lg-0 mb-3">
                         <div class=" text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/mobile-feature/Control Panel-rafiki.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/mobile-feature/Control Panel-rafiki.png" alt=""
+                                    class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5 class="">Fully Synced with Your CRM</h5>
                         </div>
@@ -373,7 +375,8 @@
                     <div class="col-lg-3 mb-lg-0 mb-3">
                         <div class=" text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/mobile-feature/Inbox cleanup-pana.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/mobile-feature/Inbox cleanup-pana.png" alt="" class="img-fluid"
+                                    data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5 class="">Access Your Inboxes</h5>
                         </div>
@@ -381,7 +384,8 @@
                     <div class="col-lg-3 mb-lg-0 mb-3">
                         <div class=" text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/mobile-feature/Calling-bro.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/mobile-feature/Calling-bro.png" alt="" class="img-fluid"
+                                    data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5 class="">Custom Call Statuses</h5>
                         </div>
@@ -389,7 +393,8 @@
                     <div class="col-lg-3 mb-lg-0 mb-3">
                         <div class=" text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/mobile-feature/Phone customization-amico.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/mobile-feature/Phone customization-amico.png" alt=""
+                                    class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5 class="">Recent Calls Synced with Web Dialers</h5>
                         </div>
@@ -397,7 +402,8 @@
                     <div class="col-lg-3 mb-lg-0 mb-3">
                         <div class=" text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/mobile-feature/Work chat-cuate.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/mobile-feature/Work chat-cuate.png" alt="" class="img-fluid"
+                                    data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5 class="">Customize Inbound Caller Display</h5>
                         </div>
@@ -405,7 +411,8 @@
                     <div class="col-lg-3 mb-lg-0 mb-3">
                         <div class=" text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/mobile-feature/Switches-bro.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/mobile-feature/Switches-bro.png" alt="" class="img-fluid"
+                                    data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5 class="">Easily Switch Between mergeasy Accounts</h5>
                         </div>
@@ -413,7 +420,8 @@
                     <div class="col-lg-3 mb-lg-0 mb-3">
                         <div class=" text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/mobile-feature/Online resume-cuate.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
+                                <img src="assets/images/mobile-feature/Online resume-cuate.png" alt="" class="img-fluid"
+                                    data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5 class="">Set Your Own Availability</h5>
                         </div>
@@ -444,9 +452,10 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6 col-md-6 mx-auto mt-lg-0 mt-3 me-auto overflow-hidden">
-                        <div class="app-box-row d-flex justify-content-center  bg-light  rounded-3 shadow-sm" data-aos="fade-right" data-aos-duration="1000">
-                            <img src="assets/images/mobile application/Group 48095556.png"
-                                alt="Choose deliery" class=" img-fluid" >
+                        <div class="app-box-row d-flex justify-content-center  bg-light  rounded-3 shadow-sm"
+                            data-aos="fade-right" data-aos-duration="1000">
+                            <img src="assets/images/mobile application/Group 48095556.png" alt="Choose deliery"
+                                class=" img-fluid">
                         </div>
                     </div>
                     <div class="col-lg-5   hero-text  mx-auto mt-lg-0 mt-3 text-lg-start text-center">
@@ -510,9 +519,10 @@
                         </ul> -->
                     </div>
                     <div class="col-lg-6  col-md-6 mx-auto ms-auto order-lg-2 order-1 overflow-hidden">
-                        <div class="app-box-row d-flex justify-content-center  bg-light  rounded-3 shadow-sm" data-aos="fade-left" data-aos-duration="1000">
-                            <img src="assets/images/mobile application/Group 48095552.png"
-                                alt="Choose deliery" class=" img-fluid" >
+                        <div class="app-box-row d-flex justify-content-center  bg-light  rounded-3 shadow-sm"
+                            data-aos="fade-left" data-aos-duration="1000">
+                            <img src="assets/images/mobile application/Group 48095552.png" alt="Choose deliery"
+                                class=" img-fluid">
                         </div>
                     </div>
 
@@ -525,10 +535,11 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6 col-md-6 mx-auto me-auto overflow-hidden">
-                      
-                        <div class="app-box-row d-flex justify-content-center  bg-light  rounded-3 shadow-sm" data-aos="fade-right" data-aos-duration="1000">
-                            <img src="assets/images/mobile application/Group 48095555.png"
-                                alt="Choose deliery" class=" img-fluid" >
+
+                        <div class="app-box-row d-flex justify-content-center  bg-light  rounded-3 shadow-sm"
+                            data-aos="fade-right" data-aos-duration="1000">
+                            <img src="assets/images/mobile application/Group 48095555.png" alt="Choose deliery"
+                                class=" img-fluid">
                         </div>
                     </div>
                     <div class="col-lg-5  hero-text  mx-auto text-lg-start text-center mt-lg-0 mt-3">
@@ -657,7 +668,8 @@
                         </div>
                     </div>
                     <div class="col-lg-4 mx-auto d-lg-block d-none">
-                        <img src="assets/images/Questions-pana.png" alt="" class="img-fluid" data-aos="fade-left" data-aos-duration="1000">
+                        <img src="assets/images/Questions-pana.png" alt="" class="img-fluid" data-aos="fade-left"
+                            data-aos-duration="1000">
                     </div>
                 </div>
             </div>
@@ -873,13 +885,13 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
 
-   <script src="https://code.jquery.com/jquery-3.7.1.slim.js"
+    <script src="https://code.jquery.com/jquery-3.7.1.slim.js"
         integrity="sha256-UgvvN8vBkgO0luPSUl2s8TIlOSYRoGFAX4jlCIm9Adc=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
-      </script>
+    </script>
     <script>
 
         $('.testi').owlCarousel({
