--- a/podio-form-builder.html
+++ b/podio-form-builder.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/buttons.css">
@@ -104,7 +104,7 @@
                                             <div class="dropdown-item d-flex align-items-center text-start">
                                                 <div class="nav-icon"><i class="bi bi-collection"></i></div>
                                                 <div class="ms-2">
-                                                     <h2 class="mb-0 pb-0">Google Chrome Extension</h2>
+                                                    <h2 class="mb-0 pb-0">Google Chrome Extension</h2>
                                                     <p class="text-sm mb-0 pb-0">Product of Mergcall.</p>
                                                 </div>
                                             </div>
@@ -264,21 +264,27 @@
                         </div>
                         <p class="hero-text pe-lg-3 mt-2 mb-0 pb-0 mb-3">
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque, modi nobis. E
-                            </p>
+                        </p>
                         <!-- <video class="banner-video-b border shadow rounded-2 my-3" controls autoplay loop >
                             <source src="https://youtu.be/WSZM0PQ6Jgk?list=PLp5go4gGNsPc0g0SS--55zhWEn_8X9XHy" type="video/mp4">
                             Your browser does not support the video tag.
                         </video> -->
-                        <iframe width="100%" height="417" src="https://www.youtube.com/embed/EQKnKB8wypg?list=PLp5go4gGNsPc0g0SS--55zhWEn_8X9XHy" title="Mergecall Podio   Form builder" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="100%" height="417"
+                            src="https://www.youtube.com/embed/EQKnKB8wypg?list=PLp5go4gGNsPc0g0SS--55zhWEn_8X9XHy"
+                            title="Mergecall Podio   Form builder" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
                         <p class="hero-text pe-lg-3 mt-3 mb-0 pb-0">
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque, modi nobis. Exercitationem
                             commodi, ex natus aperiam ea fuga, quisquam labore ut quis, omnis numquam. Sunt vero totam
-                            culpa quam consectetur! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro sint cupiditate fuga error provident. Odio quod provident nemo deserunt voluptates explicabo eius praesentium, nobis assumenda officiis enim atque repudiandae velit!
-                            </p>
+                            culpa quam consectetur! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro sint
+                            cupiditate fuga error provident. Odio quod provident nemo deserunt voluptates explicabo eius
+                            praesentium, nobis assumenda officiis enim atque repudiandae velit!
+                        </p>
                     </div>
                 </div>
-           
+
             </div>
         </section>
 
@@ -493,13 +499,13 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
 
-   <script src="https://code.jquery.com/jquery-3.7.1.slim.js"
+    <script src="https://code.jquery.com/jquery-3.7.1.slim.js"
         integrity="sha256-UgvvN8vBkgO0luPSUl2s8TIlOSYRoGFAX4jlCIm9Adc=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
-      </script>
+    </script>
     <script>
 
         $('.testi').owlCarousel({
