--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                             </li>
                         </ul>
                         <div data-aos="fade-up" data-aos-duration="1000">
-                            <a href="contact.php" class="animated-button1">
+                            <a href="https://mergeasy.docs.apiary.io/" target="_blank" class="animated-button1">
                                 <span></span>
                                 <span></span>
                                 <span></span>
