--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                                     <h1 class="mb-3 pb-0 text-black">
                                         Real Estate
                                     </h1>
-                                    <p class="hero-text ">
+                                    <p class="hero-text text mb-0 pb-0">
                                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos, fugit
                                         voluptates. Dicta, optio nesciunt? Officia, doloremque iure! Alias debitis non
                                         maxime quae neque magni doloribus dolore distinctio aut a quas, similique nobis
@@ -663,7 +663,7 @@
                                     </p>
                                 </div>
                                 <div class="col-xl-6 col-lg-5">
-                                    <img src="assets/images/hero-image.webp" alt=""
+                                    <img src="assets/images/realestate.jpg" alt=""
                                         class="img-fluid shadow rounded-1 mt-lg-4">
                                 </div>
                             </div>
@@ -675,7 +675,7 @@
                                     <h1 class="mb-3 pb-0 text-black">
                                         Property Management
                                     </h1>
-                                    <p class="hero-text ">
+                                    <p class="hero-text text mb-0 pb-0">
                                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos, fugit
                                         voluptates. Dicta, optio nesciunt? Officia, doloremque iure! Alias debitis non
                                         maxime quae neque magni doloribus dolore distinctio aut a quas, similique nobis
@@ -686,7 +686,7 @@
                                     </p>
                                 </div>
                                 <div class="col-xl-6 col-lg-5">
-                                    <img src="assets/images/hero-image.webp" alt=""
+                                    <img src="assets/images/property.jpg" alt=""
                                         class="img-fluid shadow rounded-1 mt-lg-4">
                                 </div>
                             </div>
@@ -698,7 +698,7 @@
                                     <h1 class="mb-3 pb-0 text-black">
                                         Home Services and Contracting
                                     </h1>
-                                    <p class="hero-text ">
+                                    <p class="hero-text text mb-0 pb-0">
                                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos, fugit
                                         voluptates. Dicta, optio nesciunt? Officia, doloremque iure! Alias debitis non
                                         maxime quae neque magni doloribus dolore distinctio aut a quas, similique nobis
@@ -709,7 +709,7 @@
                                     </p>
                                 </div>
                                 <div class="col-xl-6 col-lg-5">
-                                    <img src="assets/images/hero-image.webp" alt=""
+                                    <img src="assets/images/home.jpg" alt=""
                                         class="img-fluid shadow rounded-1 mt-lg-4">
                                 </div>
                             </div>
@@ -721,7 +721,7 @@
                                     <h1 class="mb-3 pb-0 text-black">
                                         Finance and Accounting
                                     </h1>
-                                    <p class="hero-text ">
+                                    <p class="hero-text mb-0 pb-0 ">
                                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos, fugit
                                         voluptates. Dicta, optio nesciunt? Officia, doloremque iure! Alias debitis non
                                         maxime quae neque magni doloribus dolore distinctio aut a quas, similique nobis
@@ -732,7 +732,7 @@
                                     </p>
                                 </div>
                                 <div class="col-xl-6 col-lg-5">
-                                    <img src="assets/images/hero-image.webp" alt=""
+                                    <img src="assets/images/finance.jpg" alt=""
                                         class="img-fluid shadow rounded-1 mt-lg-4">
                                 </div>
                             </div>
@@ -847,7 +847,7 @@
                                         </a>
                                     </div>
                                     <div class="hero-btn" data-aos="zoom-in" data-aos-duration="1500">
-                                        <a href="" class="secondry-button">Explore API Features</a>
+                                        <a href="https://mergeasy.docs.apiary.io/" target="_blank" class="secondry-button">Explore API Features</a>
                                     </div>
                                 </div>
                             </div>
@@ -884,13 +884,16 @@
                         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                             <h6 class="text-uppercase mb-4 font-weight-bold">Company Links</h6>
                             <p>
-                                <a class="text-white">About</a>
+                                <a class="text-white text-decoration-none" href="index.html">Home</a>
                             </p>
                             <p>
-                                <a class="text-white">Blog</a>
+                                <a class="text-white text-decoration-none" href="about.html">About</a>
                             </p>
                             <p>
-                                <a class="text-white">Careers</a>
+                                <a class="text-white text-decoration-none" href="blog-and-demos.html">Blog</a>
+                            </p>
+                            <p>
+                                <a class="text-white text-decoration-none" href="plan&pricing.html">Plan & Pricing</a>
                             </p>
 
                         </div>
@@ -901,19 +904,19 @@
                         <!-- Grid column -->
                         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
                             <h6 class="text-uppercase mb-4 font-weight-bold">
-                                Useful links
+                                Products
                             </h6>
                             <p>
-                                <a class="text-white">MergeSign</a>
+                                <a href="mergsign.html" class="text-white text-decoration-none">MergeSign</a>
                             </p>
                             <p>
-                                <a class="text-white">MergeCall</a>
+                                <a href="mergcall.html" class="text-white text-decoration-none">MergeCall</a>
                             </p>
                             <p>
-                                <a class="text-white">API Access</a>
+                                <a href="chrome-extension.html" class="text-white text-decoration-none">Chrome Extension</a>
                             </p>
                             <p>
-                                <a class="text-white">Help Center</a>
+                                <a href="mobile-application.html" class="text-white text-decoration-none">Mobile Application</a>
                             </p>
                         </div>
 
@@ -944,7 +947,7 @@
                             <!-- Copyright -->
                             <div class="p-3">
                                 © 2020 Mergeasy:
-                                <a class="text-white" href="https://mdbootstrap.com/">Mergeasy.com</a>
+                                <a class="text-white" href="index.html">Mergeasy.com</a>
                             </div>
                             <!-- Copyright -->
                         </div>
