--- a/mergcall.html
+++ b/mergcall.html
@@ -812,7 +812,7 @@
                                         </a>
                                     </div>
                                     <div class="hero-btn" data-aos="zoom-in" data-aos-duration="1500">
-                                        <a href="" class="secondry-button">Explore API Features</a>
+                                         <a href="https://mergeasy.docs.apiary.io/" target="_blank" class="secondry-button">Explore API Features</a>
                                     </div>
                                 </div>
                             </div>
