--- a/mergeasy.html
+++ b/mergeasy.html
@@ -452,7 +452,7 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/workflow.png" alt="" class="img-fluid" data-aos="zoom-in"
+                                <img src="assets/images/low-cost.png" alt="" class="img-fluid" data-aos="zoom-in"
                                     data-aos-duration="1000">
                             </div>
                             <h5>Intuitive
@@ -470,7 +470,7 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/low-cost.png" alt="" class="img-fluid" data-aos="zoom-in"
+                                <img src="assets/images/workflow.png" alt="" class="img-fluid" data-aos="zoom-in"
                                     data-aos-duration="1000">
                             </div>
                             <h5>Low Cost
@@ -891,13 +891,16 @@
                         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                             <h6 class="text-uppercase mb-4 font-weight-bold">Company Links</h6>
                             <p>
-                                <a class="text-white">About</a>
+                                <a class="text-white text-decoration-none" href="index.html">Home</a>
                             </p>
                             <p>
-                                <a class="text-white">Blog</a>
+                                <a class="text-white text-decoration-none" href="about.html">About</a>
                             </p>
                             <p>
-                                <a class="text-white">Careers</a>
+                                <a class="text-white text-decoration-none" href="blog-and-demos.html">Blog</a>
+                            </p>
+                            <p>
+                                <a class="text-white text-decoration-none" href="plan&pricing.html">Plan & Pricing</a>
                             </p>
 
                         </div>
@@ -908,19 +911,19 @@
                         <!-- Grid column -->
                         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
                             <h6 class="text-uppercase mb-4 font-weight-bold">
-                                Useful links
+                                Products
                             </h6>
                             <p>
-                                <a class="text-white">MergeSign</a>
+                                <a href="mergsign.html" class="text-white text-decoration-none">MergeSign</a>
                             </p>
                             <p>
-                                <a class="text-white">MergeCall</a>
+                                <a href="mergcall.html" class="text-white text-decoration-none">MergeCall</a>
                             </p>
                             <p>
-                                <a href="" class="text-white">API Access</a>
+                                <a href="chrome-extension.html" class="text-white text-decoration-none">Chrome Extension</a>
                             </p>
                             <p>
-                                <a class="text-white">Help Center</a>
+                                <a href="mobile-application.html" class="text-white text-decoration-none">Mobile Application</a>
                             </p>
                         </div>
 
@@ -951,7 +954,7 @@
                             <!-- Copyright -->
                             <div class="p-3">
                                 © 2020 Mergeasy:
-                                <a class="text-white" href="https://mdbootstrap.com/">Mergeasy.com</a>
+                                <a class="text-white" href="index.html">Mergeasy.com</a>
                             </div>
                             <!-- Copyright -->
                         </div>
