--- a/chrome-extension.html
+++ b/chrome-extension.html
@@ -766,7 +766,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+   <footer class="footer">
 
         <div class="text-center text-lg-start text-white pt-5" style="background-color: #45526e">
             <!-- Grid container -->
@@ -793,13 +793,16 @@
                         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                             <h6 class="text-uppercase mb-4 font-weight-bold">Company Links</h6>
                             <p>
-                                <a class="text-white">About</a>
+                                <a class="text-white text-decoration-none" href="index.html">Home</a>
                             </p>
                             <p>
-                                <a class="text-white">Blog</a>
+                                <a class="text-white text-decoration-none" href="about.html">About</a>
                             </p>
                             <p>
-                                <a class="text-white">Careers</a>
+                                <a class="text-white text-decoration-none" href="blog-and-demos.html">Blog</a>
+                            </p>
+                            <p>
+                                <a class="text-white text-decoration-none" href="plan&pricing.html">Plan & Pricing</a>
                             </p>
 
                         </div>
@@ -810,19 +813,19 @@
                         <!-- Grid column -->
                         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
                             <h6 class="text-uppercase mb-4 font-weight-bold">
-                                Useful links
+                                Products
                             </h6>
                             <p>
-                                <a class="text-white">MergeSign</a>
+                                <a href="mergsign.html" class="text-white text-decoration-none">MergeSign</a>
                             </p>
                             <p>
-                                <a class="text-white">MergeCall</a>
+                                <a href="mergcall.html" class="text-white text-decoration-none">MergeCall</a>
                             </p>
                             <p>
-                                <a class="text-white">API Access</a>
+                                <a href="chrome-extension.html" class="text-white text-decoration-none">Chrome Extension</a>
                             </p>
                             <p>
-                                <a class="text-white">Help Center</a>
+                                <a href="mobile-application.html" class="text-white text-decoration-none">Mobile Application</a>
                             </p>
                         </div>
 
@@ -853,7 +856,7 @@
                             <!-- Copyright -->
                             <div class="p-3">
                                 © 2020 Mergeasy:
-                                <a class="text-white" href="https://mdbootstrap.com/">Mergeasy.com</a>
+                                <a class="text-white" href="index.html">Mergeasy.com</a>
                             </div>
                             <!-- Copyright -->
                         </div>
