--- a/mergcall.html
+++ b/mergcall.html
@@ -828,17 +828,16 @@
             <!-- Grid container -->
             <div class="container p-4 pb-0 pt-5">
                 <!-- Section: Links -->
-                <section class>
+                <section class="">
                     <!--Grid row-->
                     <div class="row pt-5">
                         <!-- Grid column -->
                         <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                             <div class="bg-white p-3 rounded-3 mb-3 ">
-                                <img src="assets/images/logo.png" alt class="img-fluid">
+                                <img src="assets/images/logo.png" alt="" class="img-fluid">
                             </div>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Officiis in vel inventore
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis in vel inventore
                                 saepe vero totam.
                             </p>
                         </div>
@@ -848,16 +847,18 @@
 
                         <!-- Grid column -->
                         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                            <h6 class="text-uppercase mb-4 font-weight-bold">Company
-                                Links</h6>
+                            <h6 class="text-uppercase mb-4 font-weight-bold">Company Links</h6>
                             <p>
-                                <a class="text-white">About</a>
+                                <a class="text-white text-decoration-none" href="index.html">Home</a>
                             </p>
                             <p>
-                                <a class="text-white">Blog</a>
+                                <a class="text-white text-decoration-none" href="about.html">About</a>
                             </p>
                             <p>
-                                <a class="text-white">Careers</a>
+                                <a class="text-white text-decoration-none" href="blog-and-demos.html">Blog</a>
+                            </p>
+                            <p>
+                                <a class="text-white text-decoration-none" href="plan&pricing.html">Plan & Pricing</a>
                             </p>
 
                         </div>
@@ -868,19 +869,19 @@
                         <!-- Grid column -->
                         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
                             <h6 class="text-uppercase mb-4 font-weight-bold">
-                                Useful links
+                                Products
                             </h6>
                             <p>
-                                <a class="text-white">MergeSign</a>
+                                <a href="mergsign.html" class="text-white text-decoration-none">MergeSign</a>
                             </p>
                             <p>
-                                <a class="text-white">MergeCall</a>
+                                <a href="mergcall.html" class="text-white text-decoration-none">MergeCall</a>
                             </p>
                             <p>
-                                <a class="text-white">API Access</a>
+                                <a href="chrome-extension.html" class="text-white text-decoration-none">Chrome Extension</a>
                             </p>
                             <p>
-                                <a class="text-white">Help Center</a>
+                                <a href="mobile-application.html" class="text-white text-decoration-none">Mobile Application</a>
                             </p>
                         </div>
 
@@ -890,14 +891,10 @@
                         <!-- Grid column -->
                         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
                             <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
-                            <p><i class="fas fa-home mr-3"></i> 651 N Broad
-                                St Suite 201, Middletown, DE 19709, US</p>
-                            <p><i class="fas fa-envelope mr-3"></i>
-                                info@gmail.com</p>
-                            <p><i class="fas fa-phone mr-3"></i> + 01 234
-                                567 88</p>
-                            <p><i class="fas fa-print mr-3"></i> + 01 234
-                                567 89</p>
+                            <p><i class="fas fa-home mr-3"></i> 651 N Broad St Suite 201, Middletown, DE 19709, US</p>
+                            <p><i class="fas fa-envelope mr-3"></i> info@gmail.com</p>
+                            <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+                            <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
                         </div>
                         <!-- Grid column -->
                     </div>
@@ -915,7 +912,7 @@
                             <!-- Copyright -->
                             <div class="p-3">
                                 © 2020 Mergeasy:
-                                <a class="text-white" href="https://mdbootstrap.com/">Mergeasy.com</a>
+                                <a class="text-white" href="index.html">Mergeasy.com</a>
                             </div>
                             <!-- Copyright -->
                         </div>
